--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ body{
 }
 /************ Section *****************/
 .text-center{
-    font-size:30px;
+    font-size:250%;
     font-weight: bold;
 }
 .para1 h3{
